fix label vertcal align

--- a/src/components/base-button/BaseButton.scss
+++ b/src/components/base-button/BaseButton.scss
@@ -49,6 +49,7 @@
 
   > span {
     display: flex;
+    align-items: center;
     padding: 0 px2rem($base-space * 4);
     pointer-events: none;
     white-space: nowrap;
