--- a/src/containers/user-basket/UserBasket.scss
+++ b/src/containers/user-basket/UserBasket.scss
@@ -124,6 +124,8 @@
     }
 
     > span {
+      display: flex;
+      align-items: center;
       pointer-events: none
     }
   }
